# trajectory_planning_integ

./: .gitignore  CarAccCmd_list.txt  CarPosCmd_list.txt  CarVelCmd_list.txt  JointAccCmd_list.txt  JointPosCmd_list.txt  JointVelCmd_list.txt  plot_trajectory_data.m  run.txt  t.txt
src/auo_common/: CMakeLists.txt  auo_common-extras.cmake  package.xml
src/auo_common/cmake/: auo_package.cmake
src/auo_core/: CMakeLists.txt  README.md  package.xml
src/auo_core/AUORML_Constraint/: CMakeLists.txt
src/auo_core/AUORML_Constraint/include/AUORML/Constraint/: Constraint.h
src/auo_core/AUORML_Constraint/src/: Constraint.cpp
src/auo_core/AUORML_Dynamics/: CMakeLists.txt
src/auo_core/AUORML_Dynamics/include/AUORML/Dynamics/: Dynamics.h
src/auo_core/AUORML_Dynamics/src/: Dynamics.cpp
src/auo_core/AUORML_Kinematics/: CMakeLists.txt
src/auo_core/AUORML_Kinematics/include/AUORML/Kinematics/: Kinematics.h
src/auo_core/AUORML_Kinematics/src/: Kinematics.cpp  unint_test.cpp
src/auo_core/AUORML_Kinematics/test/: kinematics_unittest1.cpp
src/auo_core/AUORML_MathLib/: CMakeLists.txt
src/auo_core/AUORML_MathLib/include/AUORML/MathLib/: MathLib.h  RotateComputation.h
src/auo_core/AUORML_MathLib/src/: MathLib.cpp  RotateComputation.cpp
src/auo_core/AUORML_MathLib/test/: rotateComputation_unittest1.cpp
src/auo_core/AUORML_Observer/: CMakeLists.txt
src/auo_core/AUORML_Observer/include/AUORML/Observer/: Observer.h
src/auo_core/AUORML_Observer/src/: Observer.cpp
src/auo_core/AUORML_PathPlanning/: CMakeLists.txt
src/auo_core/AUORML_PathPlanning/include/AUORML/PathPlanning/: Trapezoid.h
src/auo_core/AUORML_PathPlanning/src/: Trapezoid.cpp
src/auo_core/AUORML_RobotModel/: CMakeLists.txt
src/auo_core/AUORML_RobotModel/include/AUORML/RobotModel/: RobotModel.h
src/auo_core/AUORML_RobotModel/src/: RobotModel.cpp
src/auo_core/AUORML_Utility/: CMakeLists.txt
src/auo_core/AUORML_Utility/include/AUORML/Utility/: Header.h  HelloWorld.h  SaveData.h
src/auo_core/AUORML_Utility/src/: HelloWorld.cpp  SaveData.cpp
src/auo_core/googletest/: CMakeLists.txt  package.xml
src/auo_core/googletest/googletest/: CMakeLists.txt
src/auo_core/kinematics_csharp_binding/: CMakeLists.txt
src/auo_core/kinematics_csharp_binding/src/: csharpKinematics.cpp
src/auo_core/python_binding/: CMakeLists.txt
src/auo_core/python_binding/pyKinematics/: CMakeLists.txt
src/auo_core/python_binding/pyKinematics/src/: config.csv  pyKinematics.cpp  setup.py
src/trajectory_planning/: CMakeLists.txt  README.md  package.xml
src/trajectory_planning/include/: Trajectory_Planning.h
src/trajectory_planning/src/: Trajectory_Planning.cpp  main.cpp
